--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 # This file may be used to create an environment using:
 # $ conda create --name <env> --file <this file>
 # platform: osx-arm64
-pyserial==3.4=py_2
+pyserial==3.4
