Fixed syntax bug

--- a/.github/workflows/unittest_nano.yml
+++ b/.github/workflows/unittest_nano.yml
@@ -14,8 +14,8 @@ jobs:
       - name: Setup Python 3.7
         uses: actions/setup-python@v2
         with:
-          python-version: 3.7
-          cache: 'pip'
+          python-version: 3.10
+          cache: pip test
       - run: pip install -r requirements.txt
       - run: pip test
       - name: Run the unittest script
