--- a/.github/workflows/unittest_nano.yml
+++ b/.github/workflows/unittest_nano.yml
@@ -7,11 +7,11 @@ on:
 
 jobs:
   unittest:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
       - name: Checkout the repo
         uses: actions/checkout@v2
-      - name: Setup Python 3.7
+      - name: Setup Python 3.10
         uses: actions/setup-python@v2
         with:
           python-version: 3.10
