--- a/.github/workflows/unittest_nano.yml
+++ b/.github/workflows/unittest_nano.yml
@@ -15,6 +15,7 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.7
+          cache: 'pip'
       - run: pip install -r requirements.txt
       - run: pip test
       - name: Run the unittest script
