--- a/.github/workflows/unittest_nano.yml
+++ b/.github/workflows/unittest_nano.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Setup Python 3.9
         uses: actions/setup-python@v2
         with:
-          python-version: 3.7
+          python-version: '3.10'
           cache: 'pip'
       - run: pip install -r requirements.txt
       - name: Run the unittest script
