--- a/.github/workflows/unittest_nano.yml
+++ b/.github/workflows/unittest_nano.yml
@@ -7,14 +7,14 @@ on:
 
 jobs:
   unittest:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout the repo
         uses: actions/checkout@v2
-      - name: Setup Python 3.10
+      - name: Setup Python 3.6.9
         uses: actions/setup-python@v2
         with:
-          python-version: '3.10'
+          python-version: '3.6.9'
           cache: 'pip'
       - run: pip install -r __tests__/data/requirements.txt
       - name: Run the unittest script
